# keycompute

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  README.ar.md  README.es.md  README.md  README.zh-CN.md  README.zh-TW.md  config.toml.example  docker-compose.yml
.github/workflows/: gpt-pr-review.yml  keycompute.yaml
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/common/: mod.rs
crates/integration-tests/src/mocks/: database.rs  email.rs  http_transport.rs  mod.rs  provider.rs
crates/integration-tests/tests/: e2e_billing_flow.rs  e2e_concurrent.rs  e2e_database.rs  e2e_email_service.rs  e2e_error_handling.rs  e2e_full_chain.rs  e2e_gateway.rs  e2e_password_reset.rs  e2e_password_validator.rs  e2e_provider.rs  e2e_redis_runtime.rs  e2e_registration.rs  e2e_user_tenant.rs
crates/keycompute-auth/src/: jwt.rs  lib.rs  permission.rs  user.rs
crates/keycompute-auth/src/password/: register.rs  reset.rs
crates/keycompute-billing/src/: balance.rs  lib.rs  usage_log.rs  usage_source.rs
crates/keycompute-config/src/: auth.rs  crypto.rs  lib.rs
crates/keycompute-db/: Cargo.toml
crates/keycompute-db/src/: schema.rs
crates/keycompute-db/src/migrations/: 001_create_users.sql  001_init.sql  004_create_accounts.sql  005_create_pricing_models.sql  007_create_distribution_records.sql  014_create_payment_orders.sql
crates/keycompute-db/src/models/: account.rs  api_key.rs  distribution_record.rs  email_verification.rs  mod.rs  password_reset.rs  payment_order.rs  pricing_model.rs  system_setting.rs  tenant.rs  tenant_distribution_rule.rs  usage_log.rs  user.rs  user_balance.rs  user_credential.rs  user_referral.rs
crates/keycompute-distribution/src/: lib.rs  records.rs
crates/keycompute-observability/src/: metrics.rs
crates/keycompute-payment/keycompute-alipay/: Cargo.toml
crates/keycompute-payment/keycompute-alipay/src/: client.rs  config.rs  lib.rs  service.rs  sign.rs
crates/keycompute-pricing/src/: lib.rs
crates/keycompute-ratelimit/: Cargo.toml
crates/keycompute-ratelimit/src/: lib.rs  redis.rs
crates/keycompute-routing/src/: lib.rs
crates/keycompute-runtime/: Cargo.toml
crates/keycompute-runtime/src/: account_state.rs  cooldown.rs  crypto.rs  lib.rs  provider_health.rs  redis_store.rs  store.rs
crates/keycompute-server/: Cargo.toml
crates/keycompute-server/src/: error.rs  extractors.rs  lib.rs  main.rs  middleware.rs  router.rs  state.rs
crates/keycompute-server/src/handlers/: admin.rs  admin_settings.rs  admin_user.rs  auth.rs  distribution.rs  gateway.rs  mod.rs  openai.rs  payment.rs  routing.rs
crates/keycompute-types/src/: lib.rs  user.rs
crates/llm-gateway/src/: executor.rs  lib.rs  retry.rs
crates/llm-gateway/src/proxy/: client.rs  config.rs  mod.rs  request.rs  selector.rs
crates/llm-provider/keycompute-claude/: Cargo.toml
crates/llm-provider/keycompute-claude/src/: adapter.rs  lib.rs  protocol.rs  stream.rs
crates/llm-provider/keycompute-deepseek/src/: adapter.rs  lib.rs
crates/llm-provider/keycompute-gemini/src/: protocol.rs  stream.rs
crates/llm-provider/keycompute-ollama/: Cargo.toml
crates/llm-provider/keycompute-ollama/src/: adapter.rs  stream.rs
crates/llm-provider/keycompute-openai/: Cargo.toml
crates/llm-provider/keycompute-openai/src/: adapter.rs  protocol.rs  stream.rs
crates/llm-provider/keycompute-provider-trait/: Cargo.toml
crates/llm-provider/keycompute-provider-trait/src/: http.rs  lib.rs  request.rs
crates/llm-provider/keycompute-vllm/src/: adapter.rs  lib.rs
docs/: api_non_stream.py  api_stream.py
scripts/github/: review_pr.py
