[package]
name = "keycompute-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
keycompute-types = { workspace = true }
dashmap = "6"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[features]
default = []
redis = ["dep:redis"]
