[package]
name = "keycompute-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
keycompute-types = { workspace = true }
aes-gcm = "0.10"
base64 = "0.22"
dashmap = "6"
rand = "0.8"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[features]
default = []
redis = ["dep:redis"]
