[package]
name = "keycompute-claude"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
bytes = "1.5"
futures = "0.3"
keycompute-provider-trait = { path = "../keycompute-provider-trait" }
keycompute-types = { path = "../../keycompute-types" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync", "test-util", "macros"] }
tokio-stream = "0.1"

[dev-dependencies]
tokio-test = "0.4"
